--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <a class="navlangs" target="_self">PT</a>
+                    <a class="navlangs" target="_self" style="font-weight: 400;">PT</a>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
@@ -42,36 +42,36 @@
             </a>
         </div>
         <div class="main_play">
-            <a class="closex"></a>
+            <a class="closex">x</a>
             <iframe id="main_vid" src="" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
         <div id="hmain_cont">
             <div class="hmain_secs">
-                <div class="hmain_blkt">
+                <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_titl">sobre</div>
                         <div class="hmain_btxt1">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
                         </div>
-                        <a class="hmoreico" href="sobre.html" target="_self"></a>
+                        <a class="hmoreico" href="sobre.html" target="_self">+</a>
                     </div>
-                    <div id="hmain_simg"></div>
+                    <div id="hmain_simg1"></div>
                 </div>
             </div>
             <div class="hmain_secs" style="background-color: rgb(200,200,200)">
-                <div class="hmain_blkt">
+                <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_titl2">projectos</div>
-                        <div class="hmain_stitl">partimos</div>
+                        <a class="hmain_stxt2" href="proj.html#desti1" target="_self">partimos</a>
                         <div class="hmain_txt">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                         </div>
-                        <div class="hmain_stitl">vamos</div>
+                        <a class="hmain_stxt2" href="proj.html#desti2"target="_self">vamos</a>
                         <div class="hmain_txt">
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                         </div>
-                        <div class="hmain_stitl">somos</div>
+                        <a class="hmain_stxt2" href="proj.html#desti3"target="_self">somos</a>
                         <div class="hmain_txt">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                         </div>
@@ -84,12 +84,62 @@
                 </div>
             </div>
             <div class="hmain_secs">
-                <div class="hmain_blkt">
+                <div class="hmain_blkt2">
                     <div class="hmain_titl">exposição</div>
+                    <div class="hmain_stitl"><p><b>Sem destino a</b> na Faculdade<br> de Belas-Artes de Lisboa<br> e no LxFactory</p></div>
                 </div>
-                <div class="hmain_blkt">
+                <div class="hmain_blkt1">
                     <div class="hmain_blk1">
+                        <div class="hmain_btxt1">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
+                        </div>
+                        <a class="hmoreico" href="" target="_self">+</a>
                     </div>
+                    <div id="hmain_simg2"></div>
+                </div>
+                <div class="hmain_blkt1">
+                    <div class="hmain_blk1">
+                        <div class="hmain_stxt1"><p>publicação</p></div>
+                        <div id="hmain_simg3"></div>
+                    </div>
+                    <div class="hmain_blk3">
+                        <div class="hmain_btxt2">
+                            <p>A publicação oficial da Exposição está disponível para venda na FBAUL e online.</p>
+                        </div>
+                        <a class="hbuylink" href="" target="_blank">
+                            <p>comprar</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="hmain_secs">
+            <div class="hmain_titl">agenda</div>
+                <div class="hmain_blkt3">
+                    <div class="hmain_btxt2">
+                        <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
+                    </div>
+                    <div class="hmain_ablk">
+                        <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
+                        <div class="hmain_adate">21 Set.</div>
+                        <div class="hmain_atitl">Evento</div>
+                        <div class="hmain_atxt">Local</div>
+                    </div>
+                    <div class="hmain_ablk">
+                        <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
+                        <div class="hmain_adate">2 Out.</div>
+                        <div class="hmain_atitl">Evento</div>
+                        <div class="hmain_atxt">Local</div>
+                    </div>
+                    <div class="hmain_ablk">
+                        <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
+                        <div class="hmain_adate">25 Nov.</div>
+                        <div class="hmain_atitl">Evento</div>
+                        <div class="hmain_atxt">Local</div>
+                    </div>
+                </div>
+                <div class="hmain_blkt4">
+                    <a class="hmoreico" href="" target="_self">+</a>
                 </div>
             </div>
         </div>
