--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
             <div id="navbox">
                 <a id="navlogo" href="index.html"></a>
                 <div class="navrack">
-                    <div class="navbttns"><b>sobre</b></div>
+                    <div class="navbttns" style="font-weight: 600;">sobre</div>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
                     <a class="navbttns" target="_self">exposição</a>
                     <a class="navbttns" target="_self">agenda</a>
