--- a/proj.html
+++ b/proj.html
@@ -15,7 +15,7 @@
                 <a id="navlogo" href="index.html"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
-                    <div class="navbttns"><b>projectos</b></div>
+                    <div class="navbttns" style="font-weight: 600;">projectos</div>
                     <a class="navbttns" target="_self">exposição</a>
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
