--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         <link rel="icon" href="css/img/logo_p.png" type="image/x-icon">
     </head>
     <body>
+        <!-- FaceWidget -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/fb_LT/sdk.js#xfbml=1&version=v2.10";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
         <nav id="navbar">
             <div id="navbox">
                 <a id="navlogo" href="index.html"></a>
@@ -32,9 +42,9 @@
                 <div id="shirttxt">
                     <div class="headtitl"><b>Exposição de Finalistas<br>de Design de Comunicação</b></div>
                     <div class="headtxt">2016/2017</div>
-                    <div class="headtxt2">Faculdade de Belas Artes<br>Universidade de Lisboa</div>
-                    <div class="headdates"><b>Galerias FBAUL</b> 2 - 15 Nov</div>
-                    <div class="headdates"><b>LXFactory</b> 23 Nov - 8 Dec</div>
+                    <div class="headtxt2">Faculdade de Belas-Artes<br>Universidade de Lisboa</div>
+                    <div class="headdates"><b>FBAUL</b> <t>2 - 15 Nov</t></div>
+                    <div class="headdates"><b>LxFactory</b> <t>23 Nov - 8 Dec</t></div>
                 </div>
             </div>
             <a class="playgate">
@@ -142,13 +152,26 @@
                     <a class="hmoreico" href="" target="_self">+</a>
                 </div>
             </div>
+            <div class="hmain_secs">
+                <div class="hmain_titl">segue-nos nas redes sociais!</div>
+                <div class="hmain_blkt4">
+                    <div class="hsocialbox">
+                    <div style="position: relative; height: 16px; width: 100%; overflow: hidden; padding-top:100%;"><iframe src="//widgets-code.websta.me/w/4d01b8ca53db?ck=MjAxNy0wOS0wN1QxNTozNTowNy4wMDBa" class="websta-widgets" allowtransparency="true" frameborder="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                    </div>
+                    <div class="hsocialbox">
+                    <!-- FaceWidget -->
+                        <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="300" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
+                        <p>/semdestinoa</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">sem destino a</div> 
-            <div class="foottxt">Exposição de finalistas
+            <div class="foottitl">Sem destino a</div> 
+            <div class="foottxt">Exposição de Finalistas
             <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas Artes
+            <br>Faculdade de Belas-Artes de Lisboa
             </div>
             </div>
         </div>
