--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                 <div class="hmain_titl">segue-nos nas redes sociais!</div>
                 <div class="hmain_blkt4">
                     <div class="hsocialbox">
-                    <div style="position: relative; height: 16px; width: 100%; overflow: hidden; padding-top:100%;"><iframe src="//widgets-code.websta.me/w/4d01b8ca53db?ck=MjAxNy0wOS0wN1QxNTozNTowNy4wMDBa" class="websta-widgets" allowtransparency="true" frameborder="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                        <iframe src="https://snapwidget.com/embed/437032" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%"></iframe>
                     </div>
                     <div class="hsocialbox">
                     <!-- FaceWidget -->
-                        <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="300" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
+                        <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="350" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
                         <p>/semdestinoa</p>
                     </div>
                 </div>
