--- a/sobre.html
+++ b/sobre.html
@@ -62,7 +62,7 @@
                 </div>
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                <div style="align-items: center; position: absolute; bottom: 20px;">
+                <div class="dot_holder">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span> 
                     <span class="dot" onclick="currentSlide(3)"></span>
