--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
                 <div class="hmain_blkt4">
                     <div class="hsocialbox">
                         <iframe src="https://snapwidget.com/embed/437032" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%"></iframe>
+                        <a class="hsocial_link">#semdestinoa</a>
                     </div>
                     <div class="hsocialbox">
                     <!-- FaceWidget -->
                         <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="350" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
-                        <p>/semdestinoa</p>
+                        <a class="hsocial_link">@semdestinoa</a>
                     </div>
                 </div>
             </div>
