--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
         <div id="sobremain">
             <div class="s_hold">
                 <div class="s_titl">sobre</div>
-                <div id="s_intro">
+                <div class="s_intro">
                     <div class="s_txt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p><p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p><p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p><p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
                 </div>
             </div>
@@ -38,15 +38,15 @@
                     <div class="etap_col"><div class="s_txt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p></div></div>
                     <div class="etap_col">
                         <div class="s_stxt">partimos</div>
-                        <p class="s_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                        <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                         <div class="s_stxt">vamos</div>
-                        <p class="s_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                        <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                         <div class="s_stxt">somos</div>
-                        <p class="s_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                        <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                     </div>
                 </div>
             </div>
-            <div class="s_titl">publicação</div>
+            <div class="s_stitl">publicação</div>
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <img src="css/img/img1.jpg" style="width:100%">
@@ -70,8 +70,14 @@
                 </div>
             </div>
             <div class="etap_hold">
-                <div class="s_stitl">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
-                <div class="s_stitl" style="color: rgb(251,118,96);">Comprar</div>
+                <div class="s_btxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                <a class="s_btxt2">comprar</a>
+            </div>
+            <div class="s_hold">
+                <div class="s_titl">os alunos</div>
+                <div class="s_holdnames">
+                    <a class="s_names">Abel Quental</a><a class="s_names">Ana Marta Saraiva</a><a class="s_names">Ana Catarina Santos</a><a class="s_names">Ana Ganilho</a><a class="s_names">Ana Beatriz Nunes</a><a class="s_names">António Santiago</a><a class="s_names">Beatriz Sapata</a><a class="s_names">Carolina Couto</a><a class="s_names">Catarina Barbosa</a><a class="s_names">Catarina Correia</a><a class="s_names">Catarina Serafim</a><a class="s_names">Catarina Sousa</a><a class="s_names">David Santos</a><a class="s_names">Guilherme Soeiro</a><a class="s_names">Inês Brandão</a><a class="s_names">Inês Pedro Borges</a><a class="s_names">Inês Ferreira</a><a class="s_names">Inês Sobral</a><a class="s_names">Joana Amoedo</a><a class="s_names">Joana Lourenço</a><a class="s_names">João Andrade</a><a class="s_names">João Vieira</a><a class="s_names">João Soromenho</a><a class="s_names">José Monteiro</a><a class="s_names">Kevin Ferreira</a><a class="s_names">Leonor Carvalho</a><a class="s_names">Leonor Coelho</a><a class="s_names">Lourenço Stewart</a><a class="s_names">Madalena Almeira</a><a class="s_names">Mafalda Cintra</a><a class="s_names">Mafalda Mota</a><a class="s_names">Maria Malaquias</a><a class="s_names">Mariana Pinhal</a><a class="s_names">Marta Antunes</a><a class="s_names">Matilde Melo</a><a class="s_names">Margarida Gomes da Silva</a><a class="s_names">Patrícia Medeiros</a><a class="s_names">Paulo Dias</a><a class="s_names">Pedro Cartaxana</a><a class="s_names">Raquel Sancho</a><a class="s_names">Rita Nascimento</a><a class="s_names">Rodrigo Silva</a><a class="s_names">Sara Rodrigues</a><a class="s_names">Sara Jorge</a><a class="s_names">Sofia Grilo</a><a class="s_names">Sofia Pega</a><a class="s_names">Tiago Marinho</a>
+                </div>
             </div>
         </div>
         <div id="foot">
