--- a/sobre.html
+++ b/sobre.html
@@ -60,6 +60,12 @@
                 <div class="mySlides fade">
                     <img src="css/img/img4.jpg" style="width:100%">
                 </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img5.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img6.jpg" style="width:100%">
+                </div>
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 <div class="dot_holder">
@@ -67,6 +73,8 @@
                     <span class="dot" onclick="currentSlide(2)"></span> 
                     <span class="dot" onclick="currentSlide(3)"></span>
                     <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
                 </div>
             </div>
             <div class="etap_hold">
@@ -79,6 +87,7 @@
                     <a class="s_names">Abel Quental</a><a class="s_names">Ana Marta Saraiva</a><a class="s_names">Ana Catarina Santos</a><a class="s_names">Ana Ganilho</a><a class="s_names">Ana Beatriz Nunes</a><a class="s_names">António Santiago</a><a class="s_names">Beatriz Sapata</a><a class="s_names">Carolina Couto</a><a class="s_names">Catarina Barbosa</a><a class="s_names">Catarina Correia</a><a class="s_names">Catarina Serafim</a><a class="s_names">Catarina Sousa</a><a class="s_names">David Santos</a><a class="s_names">Guilherme Soeiro</a><a class="s_names">Inês Brandão</a><a class="s_names">Inês Pedro Borges</a><a class="s_names">Inês Ferreira</a><a class="s_names">Inês Sobral</a><a class="s_names">Joana Amoedo</a><a class="s_names">Joana Lourenço</a><a class="s_names">João Andrade</a><a class="s_names">João Vieira</a><a class="s_names">João Soromenho</a><a class="s_names">José Monteiro</a><a class="s_names">Kevin Ferreira</a><a class="s_names">Leonor Carvalho</a><a class="s_names">Leonor Coelho</a><a class="s_names">Lourenço Stewart</a><a class="s_names">Madalena Almeira</a><a class="s_names">Mafalda Cintra</a><a class="s_names">Mafalda Mota</a><a class="s_names">Maria Malaquias</a><a class="s_names">Mariana Pinhal</a><a class="s_names">Marta Antunes</a><a class="s_names">Matilde Melo</a><a class="s_names">Margarida Gomes da Silva</a><a class="s_names">Patrícia Medeiros</a><a class="s_names">Paulo Dias</a><a class="s_names">Pedro Cartaxana</a><a class="s_names">Raquel Sancho</a><a class="s_names">Rita Nascimento</a><a class="s_names">Rodrigo Silva</a><a class="s_names">Sara Rodrigues</a><a class="s_names">Sara Jorge</a><a class="s_names">Sofia Grilo</a><a class="s_names">Sofia Pega</a><a class="s_names">Tiago Marinho</a>
                 </div>
             </div>
+            <div class="s_holdficha"></div>
         </div>
         <div id="foot">
             <div id="footword">
