--- a/sobre.html
+++ b/sobre.html
@@ -83,11 +83,102 @@
             </div>
             <div class="s_hold">
                 <div class="s_titl">os alunos</div>
-                <div class="s_holdnames">
+                <div id="s_holdnames">
                     <a class="s_names">Abel Quental</a><a class="s_names">Ana Marta Saraiva</a><a class="s_names">Ana Catarina Santos</a><a class="s_names">Ana Ganilho</a><a class="s_names">Ana Beatriz Nunes</a><a class="s_names">António Santiago</a><a class="s_names">Beatriz Sapata</a><a class="s_names">Carolina Couto</a><a class="s_names">Catarina Barbosa</a><a class="s_names">Catarina Correia</a><a class="s_names">Catarina Serafim</a><a class="s_names">Catarina Sousa</a><a class="s_names">David Santos</a><a class="s_names">Guilherme Soeiro</a><a class="s_names">Inês Brandão</a><a class="s_names">Inês Pedro Borges</a><a class="s_names">Inês Ferreira</a><a class="s_names">Inês Sobral</a><a class="s_names">Joana Amoedo</a><a class="s_names">Joana Lourenço</a><a class="s_names">João Andrade</a><a class="s_names">João Vieira</a><a class="s_names">João Soromenho</a><a class="s_names">José Monteiro</a><a class="s_names">Kevin Ferreira</a><a class="s_names">Leonor Carvalho</a><a class="s_names">Leonor Coelho</a><a class="s_names">Lourenço Stewart</a><a class="s_names">Madalena Almeira</a><a class="s_names">Mafalda Cintra</a><a class="s_names">Mafalda Mota</a><a class="s_names">Maria Malaquias</a><a class="s_names">Mariana Pinhal</a><a class="s_names">Marta Antunes</a><a class="s_names">Matilde Melo</a><a class="s_names">Margarida Gomes da Silva</a><a class="s_names">Patrícia Medeiros</a><a class="s_names">Paulo Dias</a><a class="s_names">Pedro Cartaxana</a><a class="s_names">Raquel Sancho</a><a class="s_names">Rita Nascimento</a><a class="s_names">Rodrigo Silva</a><a class="s_names">Sara Rodrigues</a><a class="s_names">Sara Jorge</a><a class="s_names">Sofia Grilo</a><a class="s_names">Sofia Pega</a><a class="s_names">Tiago Marinho</a>
                 </div>
             </div>
-            <div class="s_holdficha"></div>
+            <div class="s_holdficha">
+                <div class="s_titl">ficha técnica</div>
+                <div id="s_holdfcont">
+                    <div class="s_holdfsec1">
+                        <div class="s_fblks">
+                            <div class="s_ftitl">professores coordenadores</div>
+                            <div class="s_ftxt">António Nicolas<br>Pedro Almeida</div>
+                        </div>
+                        <div class="s_fblks">
+                            <div class="s_ftitl">projecto de comunicação</div>
+                            <div class="s_ftxt">Carolina Couto<br>Catarina Barbosa<br>Catarina Correia<br>Catarina Seraphim<br>Leonor Carvalho<br>Mafalda Cintra</div>
+                        </div>
+                    </div>
+                    <div class="s_holdfsec2">
+                        <div class="s_fbblk1">
+                            <div class="s_fbtitl">exposição</div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">curadoria</div>
+                            <div class="s_ftxt">António Nicolas<br>Pedro Almeida</div>
+                            </div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">modelo expositivo</div>
+                            <div class="s_ftxt">Carolina Couto<br>Mafalda Cintra</div>
+                            </div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">apoio à produção</div>
+                            <div class="s_ftxt">Joana Lourenço<br>Ana Beatriz Nunes</div>
+                            </div>
+                        </div>
+                        <div class="s_fbblk2">
+                            <div class="s_fbtitl">publicação</div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">design e edição</div>
+                            <div class="s_ftxt">Catarina Barbosa<br>Catarina Seraphim</div>
+                            </div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">apoio à produção</div>
+                            <div class="s_ftxt">Isabel Castro<br>Manuela Peixoto</div>
+                            </div>
+                        </div>
+                        <div class="s_fbblk3">
+                            <div class="s_fbtitl">website</div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">design e edição</div>
+                            <div class="s_ftxt">Catarina Correia<br>Leonor Carvalho</div>
+                            </div>
+                            <div class="s_fiblks">
+                            <div class="s_ftitl">apoio à implementação</div>
+                            <div class="s_ftxt">Guilherme Soeiro<br>Inês Pedro Borges<br>Carlos Silva</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="s_holdfsec2">
+                        <div class="s_fblks">
+                            <div class="s_ftitl">fotografia</div>
+                            <div class="s_ftxt">Catarina Seraphim<br>Mafalda Cintra<br>Leonor Carvalho</div>
+                        </div>
+                        <div class="s_fblks">
+                            <div class="s_fblks">
+                            <div class="s_ftitl">edição de fotografia</div>
+                            <div class="s_ftxt">Catarina Seraphim</div>
+                            </div>
+                            <div class="s_fblks">
+                            <div class="s_ftitl">edição e montagem de vídeo</div>
+                            <div class="s_ftxt">Catarina Correia</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="s_holdfsec1">
+                        <div class="s_holdfsec3">
+                            <div class="s_fblks">
+                            <div class="s_ftitl">apoio à produção dos materiais de comunicação</div>
+                            <div class="s_ftxt">Manuela Peixoto</div>
+                        </div>
+                        <div class="s_fblks">
+                            <div class="s_ftitl">tradução</div>
+                            <div class="s_ftxt">Ana Inês Camões</div>
+                        </div>
+                        </div>
+                        <div class="s_holdfsec3" style="justify-content: flex-end;-webkit-justify-content: flex-end;">
+                            <div class="s_fblks2">
+                                <div class="s_ftitl">apoios e patrocínios</div>
+                                <div class="s_fpshelf">
+                                    <div class="s_fpatrns" style="background-image: url(css/img/patrn1.jpg)"></div>
+                                    <div class="s_fpatrns" style="background-image: url(css/img/patrn2.jpg)"></div>
+                                    <div class="s_fpatrns" style="background-image: url(css/img/patrn3.jpg)"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
