--- a/sobre.html
+++ b/sobre.html
@@ -104,37 +104,37 @@
                         <div class="s_fbblk1">
                             <div class="s_fbtitl">exposição</div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">curadoria</div>
+                            <div class="s_fstitl">curadoria</div>
                             <div class="s_ftxt">António Nicolas<br>Pedro Almeida</div>
                             </div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">modelo expositivo</div>
+                            <div class="s_fstitl">modelo expositivo</div>
                             <div class="s_ftxt">Carolina Couto<br>Mafalda Cintra</div>
                             </div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">apoio à produção</div>
+                            <div class="s_fstitl">apoio à produção</div>
                             <div class="s_ftxt">Joana Lourenço<br>Ana Beatriz Nunes</div>
                             </div>
                         </div>
                         <div class="s_fbblk2">
                             <div class="s_fbtitl">publicação</div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">design e edição</div>
+                            <div class="s_fstitl">design e edição</div>
                             <div class="s_ftxt">Catarina Barbosa<br>Catarina Seraphim</div>
                             </div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">apoio à produção</div>
+                            <div class="s_fstitl">apoio à produção</div>
                             <div class="s_ftxt">Isabel Castro<br>Manuela Peixoto</div>
                             </div>
                         </div>
                         <div class="s_fbblk3">
                             <div class="s_fbtitl">website</div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">design e edição</div>
+                            <div class="s_fstitl">design e edição</div>
                             <div class="s_ftxt">Catarina Correia<br>Leonor Carvalho</div>
                             </div>
                             <div class="s_fiblks">
-                            <div class="s_ftitl">apoio à implementação</div>
+                            <div class="s_fstitl">apoio à implementação</div>
                             <div class="s_ftxt">Guilherme Soeiro<br>Inês Pedro Borges<br>Carlos Silva</div>
                             </div>
                         </div>
