--- a/proj.html
+++ b/proj.html
@@ -30,10 +30,14 @@
             <iframe id="head_vid" src="https://www.youtube.com/embed/2L9vFNMvIBE/?autoplay=1&mute=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
             </div>
             <div id="hprojshirt">
-                <div id="desti1" class="projbox">
-                    <div class="sprojtxt">
-                        <div  class="hprojtitl"><b>partimos</b></div>
-                        <div class="hprojtxt" style="color: rgb(255,255,255);">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                <div id="hps_stamp">
+                    <div id="hstamp_logo">
+                        <div id="desti1" class="projbox">
+                            <div class="sprojtxt">
+                                <div  class="hprojtitl"><b>partimos</b></div>
+                                <div class="hprojtxt" style="color: rgb(255,255,255);">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -42,7 +46,7 @@
             </a>
         </div>
         <div class="main_play">
-            <a class="closex"></a>
+            <a class="closex">x</a>
             <iframe id="main_vid" src="https://www.youtube.com/embed/bR-s4ReIxJo?rel=0&amp;showinfo=0" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
         <div id="main_proj">
