--- a/proj.html
+++ b/proj.html
@@ -33,8 +33,8 @@
                 <div id="hps_stamp">
                     <div id="hstamp_logo">
                         <div id="desti1" class="projbox">
-                            <div class="sprojtxt">
-                                <div  class="hprojtitl"><b>partimos</b></div>
+                            <div class="tprojtxtb">
+                                <div class="hprojtitl"><b>partimos</b></div>
                                 <div class="hprojtxt" style="color: rgb(255,255,255);">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                             </div>
                         </div>
@@ -54,8 +54,8 @@
             <div class="sidemenu">
                 <a class="ap" href="#desti1">partimos</a>
                 <div class="apv">
-                    <a class="ap" href="#desti2">vamos
-                        <div class="ap2_hold">
+                    <a class="ap" href="#desti2">vamos</a>
+                    <div class="ap2_hold">
                             <div class="ap2_title">temáticas</div>
                             <a class="ap2">tema 1</a>
                             <a class="ap2">tema 2</a>
@@ -64,21 +64,20 @@
                             <a class="ap2">tema 5</a>
                             <a class="ap2">tema 6</a>
                         </div>
-                    </a>
                 </div>
                 <a class="ap" href="#desti3">somos</a>
             </div>
         </mh>
         <div id="proj_cont">
             <div id="desti2" class="projbox">
-                <div class="sprojtxt">
+                <div class="tprojtxtb">
                     <div class="hprojtitl"><b>vamos</b></div>
                     <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                 </div>
             </div>
             <div id="desti3" class="projbox">
-                <div class="sprojtxt">
-                    <div id="destination3" class="hprojtitl"><b>somos</b></div>
+                <div class="tprojtxtb">
+                    <div class="hprojtitl"><b>somos</b></div>
                     <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                 </div>
             </div>
