--- a/proj.html
+++ b/proj.html
@@ -33,8 +33,8 @@
                 <div id="hps_stamp">
                     <div id="hstamp_logo">
                         <div id="desti1" class="projbox">
-                            <div class="tprojtxtb">
-                                <div class="hprojtitl"><b>partimos</b></div>
+                            <div class="hprojtxtb">
+                                <div class="hprojtitl" style="color: rgb(255,255,255);">partimos</div>
                                 <div class="hprojtxt" style="color: rgb(255,255,255);">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                             </div>
                         </div>
@@ -54,30 +54,104 @@
             <div class="sidemenu">
                 <a class="ap" href="#desti1">partimos</a>
                 <div class="apv">
-                    <a class="ap" href="#desti2">vamos</a>
-                    <div class="ap2_hold">
+                    <a class="ap" href="#desti2">vamos _
+                        <div class="ap2_hold">
                             <div class="ap2_title">temáticas</div>
-                            <a class="ap2">tema 1</a>
-                            <a class="ap2">tema 2</a>
-                            <a class="ap2">tema 3</a>
-                            <a class="ap2">tema 4</a>
-                            <a class="ap2">tema 5</a>
-                            <a class="ap2">tema 6</a>
+                            <a class="ap2" href="#t1">tema 1</a>
+                            <a class="ap2" href="#t2">tema 2</a>
+                            <a class="ap2" href="#t3">tema 3</a>
+                            <a class="ap2" href="#t4">tema 4</a>
+                            <a class="ap2" href="#t5">tema 5</a>
+                            <a class="ap2" href="#t6">tema 6</a>
                         </div>
+                    </a>  
                 </div>
                 <a class="ap" href="#desti3">somos</a>
             </div>
         </mh>
         <div id="proj_cont">
             <div id="desti2" class="projbox">
-                <div class="tprojtxtb">
-                    <div class="hprojtitl"><b>vamos</b></div>
+                <div class="hprojtxtb">
+                    <div class="hprojtitl">vamos</div>
                     <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                </div>
+                <div id="t1" class="mprojtxtb">
+                    <div class="mprojtitl">tema 1</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                    <div class="msprojtitl">subtema 1</div>
+                </div>
+                <div class="proj_tplaygrnd">
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                         <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                    <div class="proj_tbox">
+                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_ttitl">nome do projecto</div>
+                        <div class="proj_ttxt">legenda</div>
+                    </div>
+                </div>
+                <div id="t2" class="mprojtxtb">
+                    <div class="mprojtitl">tema 2</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                </div>
+                <div id="t3" class="mprojtxtb">
+                    <div class="mprojtitl">tema 3</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                </div>
+                <div id="t4" class="mprojtxtb">
+                    <div class="mprojtitl">tema 4</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                </div>
+                <div id="t5" class="mprojtxtb">
+                    <div class="mprojtitl">tema 5</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                </div>
+                <div id="t6" class="mprojtxtb">
+                    <div class="mprojtitl">tema 6</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
             </div>
             <div id="desti3" class="projbox">
-                <div class="tprojtxtb">
-                    <div class="hprojtitl"><b>somos</b></div>
+                <div class="hprojtxtb">
+                    <div class="hprojtitl">somos</div>
                     <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                 </div>
             </div>
