--- a/proj.html
+++ b/proj.html
@@ -54,17 +54,20 @@
             <div class="sidemenu">
                 <a class="ap" href="#desti1">partimos</a>
                 <div class="apv">
-                    <a class="ap" href="#desti2">vamos _
-                        <div class="ap2_hold">
-                            <div class="ap2_title">temáticas</div>
-                            <a class="ap2" href="#t1">tema 1</a>
-                            <a class="ap2" href="#t2">tema 2</a>
-                            <a class="ap2" href="#t3">tema 3</a>
-                            <a class="ap2" href="#t4">tema 4</a>
-                            <a class="ap2" href="#t5">tema 5</a>
-                            <a class="ap2" href="#t6">tema 6</a>
-                        </div>
-                    </a>  
+                    <div class="ap_pm">
+                        <a class="ap" href="#desti2">vamos</a>
+                        <div class="ap_plus">+</div>
+                        <div class="ap_minus">-</div>
+                    </div>
+                    <div class="ap2_hold">
+                        <div class="ap2_title">temáticas</div>
+                        <a class="ap2" href="#t1">tema 1</a>
+                        <a class="ap2" href="#t2">tema 2</a>
+                        <a class="ap2" href="#t3">tema 3</a>
+                        <a class="ap2" href="#t4">tema 4</a>
+                        <a class="ap2" href="#t5">tema 5</a>
+                        <a class="ap2" href="#t6">tema 6</a>
+                    </div>
                 </div>
                 <a class="ap" href="#desti3">somos</a>
             </div>
@@ -82,41 +85,6 @@
                     <div class="msprojtitl">subtema 1</div>
                 </div>
                 <div class="proj_tplaygrnd">
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                         <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
-                    </div>
                     <div class="proj_tbox">
                         <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
                         <div class="proj_ttitl">nome do projecto</div>
