--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
         <title>sem destino a</title>
-        <link rel="icon" href="css/img/logo_p.png" type="image/x-icon">
+        <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
         <!-- FaceWidget -->
@@ -24,7 +24,7 @@
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
-                    <a class="navbttns" target="_self">exposição</a>
+                    <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
@@ -103,7 +103,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
                         </div>
-                        <a class="hmoreico" href="" target="_self">+</a>
+                        <a class="hmoreico" href="expo.html" target="_self">+</a>
                     </div>
                     <div id="hmain_simg2"></div>
                 </div>
