--- a/proj.html
+++ b/proj.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/proj.css">
         <title>sem destino a - projectos</title>
-        <link rel="icon" href="css/img/logo_p.png" type="image/x-icon">
+        <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
         <nav id="navbar">
@@ -16,7 +16,7 @@
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <div class="navbttns" style="font-weight: 600;">projectos</div>
-                    <a class="navbttns" target="_self">exposição</a>
+                    <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
@@ -82,19 +82,105 @@
                     <div class="mprojtitl">tema 1</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
-                    <div class="msprojtitl">subtema 1</div>
+                </div>
+                <div class="msprojtitl">subtema 1</div>
+                <div class="proj_tplaygrnd">
+                    <div class="proj_tfence1a">
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="proj_tfence2a">
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="proj_tfence2c">
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="msprojtitl">subtema 2</div>
+                <div class="proj_tplaygrnd">
+                    <div class="proj_tfence2a">
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="proj_tfence1b">
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="proj_tplaygrnd">
-                    <div class="proj_tbox">
-                        <div class="proj_timg" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="proj_ttitl">nome do projecto</div>
-                        <div class="proj_ttxt">legenda</div>
+                    <div class="proj_tfence1c">
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="proj_tplaygrnd">
+                    <div class="proj_tfence2b">
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="proj_tfence2d">
+                        <div class="proj_tbox">
+                            <div class="proj_timg2" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox">
+                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
                     </div>
                 </div>
                 <div id="t2" class="mprojtxtb">
                     <div class="mprojtitl">tema 2</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
+                </div>
+                <div class="msprojtitl">subtema 1</div>
+                <div class="proj_tplaygrnd">
                 </div>
                 <div id="t3" class="mprojtxtb">
                     <div class="mprojtitl">tema 3</div>
