--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/sobre.css">
         <title>sem destino a - projectos</title>
-        <link rel="icon" href="css/img/logo_p.png" type="image/x-icon">
+        <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
         <nav id="navbar">
@@ -16,7 +16,7 @@
                 <div class="navrack">
                     <div class="navbttns" style="font-weight: 600;">sobre</div>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
-                    <a class="navbttns" target="_self">exposição</a>
+                    <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
