--- a/expo.html
+++ b/expo.html
@@ -14,13 +14,13 @@
             <div id="navbox">
                 <a id="navlogo" href="index.html"></a>
                 <div class="navrack">
-                    <div class="navbttns" href="sobre.html" target="_self">sobre</div>
+                    <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
-                    <a class="navbttns" style="font-weight: 600;">exposição</a>
+                    <div class="navbttns" style="font-weight: 600;">exposição</div>
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <a class="navlangs" target="_self">PT</a>
+                    <div class="navlangs" style="font-weight: 400;">PT</div>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
