--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <a class="navlangs" target="_self" style="font-weight: 400;">PT</a>
-                    <a class="navlangs" target="_self">EN</a>
+                    <div class="navlangs" style="font-weight: 400;">PT</div>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
             </div>
         </nav>
