--- a/proj.html
+++ b/proj.html
@@ -20,7 +20,7 @@
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <a class="navlangs" target="_self">PT</a>
+                    <div class="navlangs" style="font-weight: 400;">PT</div>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
