--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
                     <a class="navbttns" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <a class="navlangs" target="_self">PT</a>
+                    <div class="navlangs" style="font-weight: 400;">PT</div>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="s_fblks">
                             <div class="s_ftitl">projecto de comunicação</div>
-                            <div class="s_ftxt">Carolina Couto<br>Catarina Barbosa<br>Catarina Correia<br>Catarina Seraphim<br>Leonor Carvalho<br>Mafalda Cintra</div>
+                            <div class="s_ftxt">Carolina Couto<br>Catarina Barbosa<br>Catarina Correia<br>Catarina Serafim<br>Leonor Carvalho<br>Mafalda Cintra</div>
                         </div>
                     </div>
                     <div class="s_holdfsec2">
@@ -120,7 +120,7 @@
                             <div class="s_fbtitl">publicação</div>
                             <div class="s_fiblks">
                             <div class="s_fstitl">design e edição</div>
-                            <div class="s_ftxt">Catarina Barbosa<br>Catarina Seraphim</div>
+                            <div class="s_ftxt">Catarina Barbosa<br>Catarina Serafim</div>
                             </div>
                             <div class="s_fiblks">
                             <div class="s_fstitl">apoio à produção</div>
@@ -147,7 +147,7 @@
                         <div class="s_fblks">
                             <div class="s_fblks">
                             <div class="s_ftitl">edição de fotografia</div>
-                            <div class="s_ftxt">Catarina Seraphim</div>
+                            <div class="s_ftxt">Catarina Serafim</div>
                             </div>
                             <div class="s_fblks">
                             <div class="s_ftitl">edição e montagem de vídeo</div>
