--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
                     <div class="navbttns" style="font-weight: 600;">sobre</div>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
                     <a class="navbttns" href="expo.html" target="_self">exposição</a>
-                    <a class="navbttns" target="_self">agenda</a>
+                    <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 400;">PT</div>
