--- a/expo.html
+++ b/expo.html
@@ -17,7 +17,7 @@
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
                     <div class="navbttns" style="font-weight: 600;">exposição</div>
-                    <a class="navbttns" target="_self">agenda</a>
+                    <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 400;">PT</div>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="expo_holdb">
+                <div class="expo_holdc">
                     <div class="expo_subtitl"><b>FBAUL</b><br>sem destino a</div>
                     <div class="expo_btxta"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
                 </div>
@@ -97,7 +97,7 @@
                         <div class="expo_chotxt">visita virtual</div>
                     </div>
                 </div>
-                <div class="expo_holdb">
+                <div class="expo_holdc">
                     <div class="expo_subtitl"><b>LxFactory</b><br>sem destino a qqr coisa</div>
                     <div class="expo_btxta"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
                 </div>
