--- a/agend.html
+++ b/agend.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/agend.css">
-        <title>sem destino a - projectos</title>
+        <title>sem destino a - agenda</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
@@ -24,6 +24,11 @@
                 </div>
             </div>
         </nav>
+        <div id="agendmain">
+            <div class="age_hold">
+                <div class="age_titl">agenda</div>
+            </div>
+        </div>
         <div id="foot">
             <div id="footword">
             <div class="foottitl">sem destino a</div> 
