--- a/proj.html
+++ b/proj.html
@@ -47,7 +47,7 @@
         </div>
         <div class="main_play">
             <a class="closex">x</a>
-            <iframe id="main_vid" src="https://www.youtube.com/embed/bR-s4ReIxJo?rel=0&amp;showinfo=0" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
+            <iframe id="main_vid2" src="" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
         <div id="main_proj">
         <mh>
